--- a/package.json
+++ b/package.json
@@ -39,14 +39,14 @@
     "js-cookie": "^2.1.4",
     "laravel-echo": "^1.3.2",
     "laravel-echo-server": "^1.3.1",
-    "laravel-mix": "^1.4.3",
+    "laravel-mix": "^1.6.1",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "promise": "^8.0.1",
     "v-bar": "^3.0.0",
     "v-img": "^0.1.0",
     "vee-validate": "^2.0.0-rc.17",
-    "vue": "^2.4.4",
+    "vue": "^2.5.9",
     "vue-acl": "^2.2.2",
     "vue-agile": "^0.2.5",
     "vue-clazy-load": "^0.2.0",
@@ -56,9 +56,10 @@
     "vue-echo": "^1.0.1",
     "vue-head": "^2.0.11",
     "vue-js-cookie": "^2.0.0",
+    "vue-loader": "^13.5.0",
     "vue-meta": "^1.2.0",
     "vue-router": "^2.7.0",
-    "vue-template-compiler": "^2.4.4",
+    "vue-template-compiler": "^2.5.9",
     "vue-timeago": "^3.3.6",
     "vue-trumbowyg": "^3.1.1",
     "vue-truncate-filter": "^1.1.7",
@@ -68,7 +69,7 @@
     "vue2-dropzone": "^2.3.5",
     "vue2-filters": "^0.2.2",
     "vuebars": "^0.1.1",
-    "vuetify": "^0.16.4",
+    "vuetify": "^0.17.3",
     "vueup": "^1.0.5",
     "vuex": "^2.4.0",
     "vuex-persistedstate": "^2.0.0",
