--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,11 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.5.*",
         "laravel/passport": "^3.0",
+        "laravel/socialite": "^3.0",
         "laravel/tinker": "~1.0",
         "mews/purifier": "^2.0",
         "predis/predis": "^1.1",
+        "socialiteproviders/twitter": "^3.0",
         "spatie/laravel-collection-macros": "^3.3",
         "spatie/laravel-medialibrary": "6.0.0",
         "spatie/laravel-permission": "^2.6",
