added all socialiteproviders needed, also added generators for creating a new one

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,19 @@
         "laravel/tinker": "~1.0",
         "mews/purifier": "^2.0",
         "predis/predis": "^1.1",
+        "socialiteproviders/Medium": "^3.0",
+        "socialiteproviders/dailymotion": "^3.0",
+        "socialiteproviders/generators": "^4.0",
+        "socialiteproviders/google": "^3.0",
+        "socialiteproviders/imgur": "^3.0",
+        "socialiteproviders/instagram": "^3.0",
+        "socialiteproviders/pinterest": "^3.0",
+        "socialiteproviders/reddit": "^3.0",
+        "socialiteproviders/tumblr": "^3.0",
         "socialiteproviders/twitter": "^3.0",
+        "socialiteproviders/vimeo": "^3.0",
+        "socialiteproviders/wordpress": "^3.0",
+        "socialiteproviders/youtube": "^3.0",
         "spatie/laravel-collection-macros": "^3.3",
         "spatie/laravel-medialibrary": "6.0.0",
         "spatie/laravel-permission": "^2.6",
