--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "gladcodes/keygen": "^1.1",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.5.*",
+        "laravel/horizon": "^1.0",
         "laravel/passport": "^3.0",
         "laravel/socialite": "^3.0",
         "laravel/tinker": "~1.0",
