--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "vue": "^2.5.9",
     "vue-acl": "^2.2.2",
     "vue-agile": "^0.2.5",
+    "vue-axios": "^2.0.2",
     "vue-clazy-load": "^0.2.0",
     "vue-clicky": "^1.1.0",
     "vue-cookie-law": "^1.3.0",
