--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "babel-preset-vue-app": "^1.3.1",
     "browser-sync": "^2.18.13",
     "browser-sync-webpack-plugin": "^1.2.0",
-    "eslint": "^4.7.0",
+    "eslint": "^4.12.1",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.9.0",
@@ -28,7 +28,9 @@
     "eslint-plugin-standard": "^3.0.1",
     "eslint-plugin-vue": "^3.14.0",
     "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1"
+    "stylus-loader": "^3.0.1",
+    "typescript-eslint-parser": "^9.0.1",
+    "vue-eslint-parser": "^1.0.0"
   },
   "dependencies": {
     "@xkeshi/image-compressor": "^0.5.2",
@@ -49,6 +51,7 @@
     "vue": "^2.5.9",
     "vue-acl": "^2.2.2",
     "vue-agile": "^0.2.5",
+    "vue-authenticate": "^1.3.4",
     "vue-axios": "^2.0.2",
     "vue-clazy-load": "^0.2.0",
     "vue-clicky": "^1.1.0",
