--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,13 +15,7 @@
     "rules": {
         "no-undef": 1,
         "no-unused-vars": [
-            "error",
-            {
-                "varsIgnorePattern": "app",
-                "args": "after-used",
-                "argsIgnorePattern": "^_",
-                "ignoreRestSiblings": true
-            }
+            "error"
         ],
         "no-use-before-define": [1, {"functions": true, "classes": true, "variables": true}],
         "indent": [
@@ -38,6 +32,7 @@
         
     },
     "globals": {
+        "app": true,
         "axios": true,
         "Vue": true,
         "vm": true,
