--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "mews/purifier": "^2.0",
         "predis/predis": "^1.1",
         "socialiteproviders/generators": "^4.0",
+        "socialiteproviders/manager": "^3.3",
         "spatie/laravel-collection-macros": "^3.3",
         "spatie/laravel-medialibrary": "6.0.0",
         "spatie/laravel-permission": "^2.6",
