added daily motion service provider

--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,8 @@
             "SocialiteProviders\\Facebook\\": "SocialiteProviders/Facebook/src/",
             "SocialiteProviders\\Twitter\\": "SocialiteProviders/Twitter/src/",
             "SocialiteProviders\\Youtube\\": "SocialiteProviders/Youtube/src/",
-            "SocialiteProviders\\Vimeo\\": "SocialiteProviders/Vimeo/src/"
+            "SocialiteProviders\\Vimeo\\": "SocialiteProviders/Vimeo/src/",
+            "SocialiteProviders\\DailyMotion\\": "SocialiteProviders/DailyMotion/src/"
         },
         "files": [
             "app/Helpers.php"
