added loadash for global var

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -52,7 +52,8 @@
         "route": true,
         "App": true,
         "AppForm": true,
-        "moment": true
+        "moment": true,
+        "_": true
     },
     "parserOptions": {
         "parser": "babel-eslint",
