--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css",
-    "/js/vendor.js": "/js/vendor.js",
-    "/js/manifest.js": "/js/manifest.js"
+    "/js/app.js": "/js/app.js?id=573e91c899c6d7dc050f",
+    "/css/app.css": "/css/app.css?id=1376e54c797c3b2e161b",
+    "/js/vendor.js": "/js/vendor.js?id=644343a45eedc2dab5f1",
+    "/js/manifest.js": "/js/manifest.js?id=608f609a8f02593c70f4"
 }
